--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -41,36 +41,19 @@ en:
     sidebar_title: "Join the Supercluster"
     sidebar_desc: "Start orchestrating your ad campaigns with the power of the Laniakea supercluster."
   sidebar:
-    dashboard: "Dashboard"
-    campaigns: "Campaigns"
-    analytics: "Analytics"
-    creatives: "Creatives"
-    clients: "Clients"
-    documents: "Documents"
-    settings: "Settings"
-    help: "Help"
-    logout: "Logout"
     main_menu: "Main Menu"
-    support: "Support"
-    operation: "Operation"
-    sales: "Sales"
-    attendance: "Attendance"
-    dispatches: "Dispatches"
-    payments: "Payments"
-    inventory: "Inventory"
-    stock: "Stock"
-    warehouses: "Warehouses"
-    transfers: "Transfers"
-    purchases: "Purchases"
-    suppliers: "Suppliers"
-    catalog: "Catalog"
-    products: "Products"
-    categories: "Categories"
-    administration: "Administration"
-    registers: "Registers"
-    properties: "Properties"
-    roles: "Roles & Permissions"
-    company: "Company"
+    dashboard: "Dashboard"
+    content_forge: "Content Forge"
+    ad_advisor: "Ad Advisor"
+    management: "Management"
+    campaigns: "Campaigns"
+    social_profiles: "Social Profiles"
+    analytics: "ROI Analytics"
+    configuration: "Configuration"
+    organization: "Organization"
+    team: "Team"
+    billing: "Billing"
+    logout: "Logout"
   common:
     back_to_login: "Back to login"
     back_to_dashboard: "Back to Dashboard"
@@ -167,6 +150,67 @@ en:
       tooltips:
         remove: "Remove member"
         cancel: "Cancel invitation"
+  dashboard:
+    welcome: "Hello, welcome back 👋"
+    subtitle: "Here's a summary of your campaigns and ROI opportunities today."
+    new_campaign: "New Campaign"
+    kpis:
+      total_revenue: "Ad Revenue"
+      new_customers: "New Conversions"
+      active_accounts: "Total Reach"
+      growth_rate: "Efficiency (ROAS)"
+    view_roi_reports: "View ROI Reports"
+    audience_analysis: "Audience & Network Analysis"
+    recent_conversions: "Latest Conversions"
+    direct_attributions: "%{count} direct attributions today"
+    view_full_history: "View Full History"
+    ad_advisor:
+      title: "Smart Ads Advisor"
+      subtitle: "AI-identified content with high conversion potential."
+      boost: "Inject Budget"
+      opportunity: "Opportunity Score"
+      roi: "Projected ROI"
+      reach: "Suggested Reach"
+      badges:
+        top_performer: "Top Performer"
+        evergreen: "Evergreen"
+        viral_potential: "Viral Potential"
+    content_forge:
+      title: "AI Content Forge"
+      subtitle: "Generate complete campaigns (Post + Image + Video) from an idea."
+      placeholder: "e.g., Create a campaign to sell premium organic coffee..."
+      generate_button: "Generate Campaign"
+      generating: "Forging..."
+      beta_badge: "Beta"
+      agent_active: "AI Agent Active"
+      features:
+        copy: "Multi-network Copy"
+        creatives: "Creatives"
+        video: "Video / Reels"
+        copy_desc: "AI Optimized"
+        creatives_desc: "DALL-E 3 Ready"
+        video_desc: "AI Gen-Video"
+    metrics:
+      performance_chart: "Campaign Performance"
+      reach_chart: "Organic vs Paid Reach"
+      distribution: "Platform Distribution"
+      total_3_months: "Total for the last 3 months"
+      organic: "Organic"
+      paid_ads: "Paid Ads"
+      increasing: "Up %{percent} this month"
+      visitors_6_months: "Total visitors for the last 6 months"
+      visitors_distribution: "Total visitors by social network"
+      impressions: "Impressions"
+      social_leader: "%{platform} leads with %{percent}"
+    kpi_descriptions:
+      revenue: "AI-optimized investment"
+      revenue_sub: "Based on the last 30 days"
+      customers: "Direct conversions from Ads"
+      customers_sub: "Average CPA: %{cpa}"
+      reach: "Total brand reach"
+      reach_sub: "Impact frequency: %{freq}"
+      growth: "Investment multiplier"
+      growth_sub: "Quarterly goal: %{target}"
   superadmin:
     sidebar:
       global_management: "Global Management"
