--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -41,36 +41,19 @@ es:
     sidebar_title: "Únete al Supercúmulo"
     sidebar_desc: "Comienza a orquestar tus campañas de anuncios con el poder del supercúmulo Laniakea."
   sidebar:
-    dashboard: "Tablero"
-    campaigns: "Campañas"
-    analytics: "Analítica"
-    creatives: "Creatividades"
-    clients: "Clientes"
-    documents: "Documentos"
-    settings: "Configuración"
-    help: "Ayuda"
-    logout: "Cerrar Sesión"
     main_menu: "Menú Principal"
-    support: "Soporte"
-    operation: "Operación"
-    sales: "Ventas"
-    attendance: "Asistencia"
-    dispatches: "Despachos"
-    payments: "Pagos"
-    inventory: "Inventario"
-    stock: "Stock"
-    warehouses: "Bodegas"
-    transfers: "Traslados"
-    purchases: "Compras"
-    suppliers: "Proveedores"
-    catalog: "Catálogo"
-    products: "Productos"
-    categories: "Categorías"
-    administration: "Administración"
-    registers: "Registros"
-    properties: "Propiedades"
-    roles: "Roles y Permisos"
-    company: "Empresa"
+    dashboard: "Tablero"
+    content_forge: "Forja de Contenido"
+    ad_advisor: "Asesor de Pauta"
+    management: "Gestión"
+    campaigns: "Campañas"
+    social_profiles: "Perfiles Sociales"
+    analytics: "Analítica ROI"
+    configuration: "Configuración"
+    organization: "Organización"
+    team: "Equipo"
+    billing: "Facturación"
+    logout: "Cerrar Sesión"
   common:
     back_to_login: "Volver al inicio de sesión"
     back_to_dashboard: "Volver al Tablero"
@@ -163,6 +146,67 @@ es:
         cancel_success: "Invitación cancelada"
         cancel_error: "Error al cancelar la invitación"
         remove_confirm: "¿Estás seguro de que deseas eliminar a este miembro?"
+  dashboard:
+    welcome: "Hola, bienvenido de nuevo 👋"
+    subtitle: "Aquí tienes un resumen de tus campañas y oportunidades de ROI hoy."
+    new_campaign: "Nueva Campaña"
+    kpis:
+      total_revenue: "Ingresos por Ads"
+      new_customers: "Nuevas Conversiones"
+      active_accounts: "Alcance Total"
+      growth_rate: "Eficiencia (ROAS)"
+    view_roi_reports: "Ver Reportes ROI"
+    audience_analysis: "Análisis de Audiencia y Redes"
+    recent_conversions: "Últimas Conversiones"
+    direct_attributions: "%{count} atribuciones directas hoy"
+    view_full_history: "Ver Historial Completo"
+    ad_advisor:
+      title: "Smart Ads Advisor"
+      subtitle: "Contenidos con alto potencial de conversión identificados por IA."
+      boost: "Inyectar Presupuesto"
+      opportunity: "Puntaje de Oportunidad"
+      roi: "ROI Proyectado"
+      reach: "Alcance Sugerido"
+      badges:
+        top_performer: "Alto Rendimiento"
+        evergreen: "Evergreen"
+        viral_potential: "Potencial Viral"
+    content_forge:
+      title: "AI Content Forge"
+      subtitle: "Genera campañas completas (Post + Imagen + Video) a partir de una idea."
+      placeholder: "Ej: Crea una campaña para vender café orgánico premium..."
+      generate_button: "Generar Campaña"
+      generating: "Forjando..."
+      beta_badge: "Beta"
+      agent_active: "Agente IA Activo"
+      features:
+        copy: "Copy Multi-red"
+        creatives: "Creatividades"
+        video: "Video / Reels"
+        copy_desc: "Optimizado por IA"
+        creatives_desc: "DALL-E 3 Ready"
+        video_desc: "IA Gen-Video"
+    metrics:
+      performance_chart: "Rendimiento de Campañas"
+      reach_chart: "Alcance Orgánico vs Pagado"
+      distribution: "Distribución por Plataforma"
+      total_3_months: "Total de los últimos 3 meses"
+      organic: "Orgánico"
+      paid_ads: "Paid Ads"
+      increasing: "En aumento %{percent} este mes"
+      visitors_6_months: "Visitantes totales de los últimos 6 meses"
+      visitors_distribution: "Visitantes totales por red social"
+      impressions: "Impresiones"
+      social_leader: "%{platform} lidera con %{percent}"
+    kpi_descriptions:
+      revenue: "Inversión optimizada por IA"
+      revenue_sub: "Basado en los últimos 30 días"
+      customers: "Conversiones directas desde Ads"
+      customers_sub: "CPA Promedio: %{cpa}"
+      reach: "Alcance total de la marca"
+      reach_sub: "Frecuencia de impacto: %{freq}"
+      growth: "Multiplicador de inversión"
+      growth_sub: "Objetivo del trimestre: %{target}"
   superadmin:
     sidebar:
       global_management: "Gestión Global"
