--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -58,6 +58,32 @@ en:
     back_to_login: "Back to login"
     back_to_dashboard: "Back to Dashboard"
     none: "None"
+    rich_text_editor:
+      bold: "Bold"
+      italic: "Italic"
+      bullet_list: "Bullet List"
+      ordered_list: "Ordered List"
+      task_list: "Task List"
+      blockquote: "Blockquote"
+      undo: "Undo"
+      redo: "Redo"
+      emojis: "Emojis"
+      add_image: "Insert Image"
+      underline: "Underline"
+      strike: "Strike"
+      highlight: "Highlight"
+      align_left: "Align Left"
+      align_center: "Align Center"
+      align_right: "Align Right"
+      align_justify: "Justify"
+      heading_1: "Large Heading"
+      heading_2: "Medium Heading"
+      heading_3: "Small Heading"
+      text_color: "Text Color"
+      clear_formatting: "Clear Formatting"
+      characters: "characters"
+      words: "words"
+      placeholder: "Write your content here..."
   password:
     forgot_title: "Forgot your password?"
     forgot_subtitle: "Don't worry, we'll send you instructions to recover it."
@@ -183,6 +209,14 @@ en:
       generating: "Forging..."
       beta_badge: "Beta"
       agent_active: "AI Agent Active"
+      tabs:
+        ai: "Smart Mode"
+        manual: "Manual Studio"
+      manual:
+        label: "Author's Draft"
+        placeholder: "Write your post content here..."
+        clean: "Clean"
+        add_media: "Add Media"
       features:
         copy: "Multi-network Copy"
         creatives: "Creatives"
