--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -58,6 +58,32 @@ es:
     back_to_login: "Volver al inicio de sesión"
     back_to_dashboard: "Volver al Tablero"
     none: "Ninguno"
+    rich_text_editor:
+      bold: "Negrita"
+      italic: "Cursiva"
+      bullet_list: "Lista de viñetas"
+      ordered_list: "Lista numerada"
+      task_list: "Lista de tareas"
+      blockquote: "Cita"
+      undo: "Deshacer"
+      redo: "Rehacer"
+      emojis: "Emojis"
+      add_image: "Insertar Imagen"
+      underline: "Subrayado"
+      strike: "Tachado"
+      highlight: "Resaltar"
+      align_left: "Alinear a la izquierda"
+      align_center: "Centrar"
+      align_right: "Alinear a la derecha"
+      align_justify: "Justificar"
+      heading_1: "Título Grande"
+      heading_2: "Título Mediano"
+      heading_3: "Título Pequeño"
+      text_color: "Color de texto"
+      clear_formatting: "Limpiar formato"
+      characters: "caracteres"
+      words: "palabras"
+      placeholder: "Escribe tu contenido aquí..."
   password:
     forgot_title: "¿Olvidaste tu contraseña?"
     forgot_subtitle: "No te preocupes, te enviaremos instrucciones para recuperarla."
@@ -179,6 +205,14 @@ es:
       generating: "Forjando..."
       beta_badge: "Beta"
       agent_active: "Agente IA Activo"
+      tabs:
+        ai: "Modo Inteligente"
+        manual: "Estudio Manual"
+      manual:
+        label: "Borrador de Autor"
+        placeholder: "Escribe el contenido de tu post aquí..."
+        clean: "Limpiar"
+        add_media: "Añadir Multimedia"
       features:
         copy: "Copy Multi-red"
         creatives: "Creatividades"
