Tabs and Inons OK

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -231,6 +231,15 @@ en:
       name: "Name"
       description: "Description"
       status: "Status"
+      metrics:
+        impressions: "Impressions"
+        clicks: "Clicks"
+        reactions: "Reactions (Total)"
+        spend: "Spend"
+        updated_at: "Updated at"
+        refresh: "Refresh Metrics"
+        refreshing: "Refreshing..."
+        na: "N/A"
       created: "Campaign created successfully."
       updated: "Campaign updated successfully."
       destroyed: "Campaign deleted successfully."
@@ -266,6 +275,22 @@ en:
       reach_sub: "Impact frequency: %{freq}"
       growth: "Investment multiplier"
       growth_sub: "Quarterly goal: %{target}"
+    ads_manager:
+      title: "Ad Optimizer Agent"
+      subtitle: "Automate the promotion of your successful posts"
+      daily_budget: "Daily Budget"
+      budget_desc: "Laniakea will optimize spending up to this daily limit projecting a positive ROI."
+      smart_segmentation: "Smart Segmentation"
+      seg_placeholder: "Describe your ideal customer (e.g. Business owners in NY who buy luxury watches...)"
+      generate_seg: "Generate AI Segmentation"
+      seg_success: "Segmentation generated successfully"
+      save_config: "SAVE ADS CONFIGURATION"
+      save_success: "Ads configuration saved"
+      age: "Age"
+      gender: "Gender"
+      gender_all: "All"
+      interests: "Interests"
+      locations: "Locations"
   superadmin:
     sidebar:
       global_management: "Global Management"
