--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -227,6 +227,15 @@ es:
       name: "Nombre"
       description: "Descripción"
       status: "Estado"
+      metrics:
+        impressions: "Impresiones"
+        clicks: "Clics"
+        reactions: "Reacciones (Total)"
+        spend: "Gasto"
+        updated_at: "Actualizado el"
+        refresh: "Actualizar Métricas"
+        refreshing: "Actualizando..."
+        na: "N/A"
       created: "Campaña creada con éxito."
       updated: "Campaña actualizada con éxito."
       destroyed: "Campaña eliminada con éxito."
@@ -262,6 +271,22 @@ es:
       reach_sub: "Frecuencia de impacto: %{freq}"
       growth: "Multiplicador de inversión"
       growth_sub: "Objetivo del trimestre: %{target}"
+    ads_manager:
+      title: "Agente de Pauta (Ads)"
+      subtitle: "Automatiza la promoción de tus posts exitosos"
+      daily_budget: "Presupuesto Diario"
+      budget_desc: "Laniakea optimizará el gasto hasta este límite diario proyectando un ROI positivo."
+      smart_segmentation: "Segmentación Inteligente"
+      seg_placeholder: "Describe tu cliente ideal (ej. Hombres en Bogotá que compran zapatos de lujo...)"
+      generate_seg: "Generar Segmentación con IA"
+      seg_success: "Segmentación generada con éxito"
+      save_config: "GUARDAR CONFIGURACIÓN DE ADS"
+      save_success: "Configuración de anuncios guardada"
+      age: "Edad"
+      gender: "Género"
+      gender_all: "Todas"
+      interests: "Intereses"
+      locations: "Ubicaciones"
   superadmin:
     sidebar:
       global_management: "Gestión Global"
